<resources>
    <string name="app_name">HistriApp</string>
    <string name="api_key">AIzaSyC-gksL80SBsNqFaScBuTEUm5i7v36buvg</string>
    <string name="facebook_app_id">1846341322313638</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_discount">DiscountActivity</string>
    <string name="tivoli">Tivoli</string>
    <string name="beer_club">Beer Club</string>
    <string name="puljanka">Puljanka</string>
    <string name="title_activity_institution_selection">InstitutionSelection</string>
    <string name="start_quiz">Start adventure</string>
    <string name="ranking">View cupons</string>
    <string name="locations">View locations</string>
    <string name="user_rank_name">User name</string>
    <string name="user_rank_score">Score</string>
    <string name="user_rank_time">Time</string>
    <string name="title_activity_qr">QrActivity</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="title_activity_quiz_setup">QuizSetupActivity</string>
    <string name="set_location_failed">Failed to detect location</string>
    <string name="set_location_failed_description">Consider moving to open area so the gps can track your location easier</string>
    <string name="location_input_continue">Proceed</string>
    <string name="location_prompt_cancel">Cancel</string>
    <string name="location_out_of_range">Location out of range</string>
    <string name="location_out_of_range_alert">You can start the quiz once you are inside one of the institutions</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_internet_alert">To start the game you have to be connected to the internet</string>
    <string name="no_gps">Please turn on gps</string>
    <string name="no_gps_alert">This application uses location services</string>
    <string name="no_gps_internet">No gps or internet connection</string>
    <string name="no_gps_internet_alert">This application uses internet and location services</string>
    <string name="title_activity_test">TestAct</string>
    <string name="title_activity_treasure">TreasureHuntAct</string>
    <string name="title_activity_instructions_pager">InstructionsPager</string>
    <string name="introduction">Introduction</string>
    <string name="welcoming_text">Welcome to the HistriApp, an application that takes you on a journey through historic city of Pula</string>
    <string name="rules">Tutorial</string>
    <string name="tutorial_text">Upon entering the HistriApp you will see a treasure cave, open it to embarg on mysterios journey, you will be able to select to start the quiz once you are inside our partners institutsoions which you will find if you click on locations button</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="usage_text">This application uses your gps location and internet connection in order to make the adventure experience more pleasent</string>
    <string name="instructions">Instructions</string>
    <string name="your_story">Treasure hunt</string>
    <string name="treasure_hunt_explanaition">After finishing the quiz in our institutions, you will be able to enter the treasure hunt , in that hunt you will have to find pictures scattered around Pulas center, once you find it take a picture of it.</string>
    <string name="prices">Cupons</string>
    <string name="prices_text">After finishing the treasure hunt, depending on the time it took for you, you will recieve cupon codes for shopping in some of Pulas stores</string>
    <string name="end_instructions">Enter</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_treasure_hunt_setup">TreasureHuntSetupAct</string>
    <string name="title_activity_test_text">TestTextAct</string>
    <string name="title_activity_ocr_capture">OcrCaptureActivity</string>
    <string name="permission_camera_rationale">Camera permission</string>
    <string name="ok">Ok</string>
    <string name="low_storage_error">Low storage</string>
    <string name="no_camera_permission">No camera</string>
    <string name="ocr_success">Success</string>
    <string name="ocr_failure">Failure</string>
    <string name="ocr_error">Error</string>
    <string name="ocr_header">Header</string>
    <string name="read_text">Read text</string>
    <string name="auto_focus">Auto focus</string>
    <string name="use_flash">Use flash</string>
    <string name="inst_location_message">Visit institutions website?</string>
    <string name="title_activity_revard">RevardAct</string>
    <string name="welcoming_header">Welcome to the:</string>
    <string name="live_inst">\"When you find the clue we are looking for, take a picture of it, and if the picture matches proceed to the next clue\"</string>
    <string name="process_text">Processing the image... this may take a while</string>
    <string name="exit_header">Quit adventure?</string>
    <string name="exit_body">Are you sure you want to exit? all your progress will be lost.</string>
    <string name="no_internet_splash">No internet connection</string>
    <string name="no_internet_body_splash">You have to turn on your wifi or mobile data in order to use this app</string>
</resources>
